# jsonkdl

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml  test.yml
examples/: children-mixed.json  children.json  complex-2.json  complex.json  empty-values.json  mixed.json  properties.json  quirky.json  simple.json  types-mixed.json  types.json
src/: cli.rs  convert.rs  main.rs
tests/: arbitrary_precision.rs  integration.rs  integration_v1.rs  integration_v2.rs
tests/common/: mod.rs
