[package]
name = "jsonkdl"
version = "1.1.0"
description = "JSON to KDL converter"
license = "MIT"
edition = "2024"

[[bin]]
name = "jsonkdl"
path = "src/main.rs"

[dependencies]
kdl = { version = "6.3.4", features = ["v1"] }
serde_json = { version = "1.0.140", features = ["arbitrary_precision"] }

[dev-dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
